update time column to UTC time column

--- a/square.ipynb
+++ b/square.ipynb
@@ -28,7 +28,7 @@
     "df = pd.DataFrame(lis, columns=[\"number\", \"square\"])\n",
     "\n",
     "# add time column\n",
-    "df[\"time\"] = pd.Timestamp.now()\n",
+    "df[\"UTC time\"] = pd.Timestamp.now()\n",
     "print(df)\n",
     "\n",
     "# read and save the latest file to \"latest.csv\"\n",
